fix warning badge alignment and change color to white

--- a/public/sass/course.scss
+++ b/public/sass/course.scss
@@ -117,9 +117,10 @@ $shadow: #888888;
   right: -5px;
   float: right;
   background: $red;
+  padding-top: 1.5px;
   border-radius: 6px;
   height: 14px;
-  color: $black;
+  color: $white;
   z-index: 3;
   width: 14px;
 }
